--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 									<span class="number" data-number="5">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/keshav-sharma" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/sharma-keshav1" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -519,7 +519,7 @@
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/keshav-sharma"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/sharma-keshav1"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://twitter.com/"><span class="icon-facebook"></span></a></li>
 				      <li class="ftco-animate"><a href="https://www.instagram.com/its__brahman__000/"><span class="icon-instagram"></span></a></li>
 					</ul>
